wiz-server jpg update

--- a/wizweb/wiz/templates/home.html
+++ b/wizweb/wiz/templates/home.html
@@ -39,12 +39,13 @@
                 </div>
             </div>
             <div class="col-md-4 image">
-                <a href="http://www.biofuels-asia.com/" target="_blank">
-                    <img class="image-border" src="/static/images/1.jpg" width="100%">
+                <a href="http://www.wizpolyolefin.com">
+                    <img class="image-border" src="/static/images/banner-1.jpg" width="100%">
                 </a>
             </div>
             <div class="col-md-4 image">
-                <a href="#"><img class="image-border" src="/static/images/2.jpg" width="100%"></a>
+                <a href="http://www.plasticizersummit.com" target="_blank">
+                    <img class="image-border" src="/static/images/banner-2.jpg" width="100%"></a>
             </div>
         </div>
         <div style="margin-top:10px;"></div>
@@ -69,11 +70,11 @@
                 </div>
             </div>
             <div class="col-md-4 image">
-                <a href="#"><img class="image-border" src="/static/images/3.jpg" width="100%"></a>
+                <a href="#"><img class="image-border" src="/static/images/banner-3.jpg" width="100%"></a>
             </div>
             <div class="col-md-4 image">
-                <a href="http://www.plasticizersummit.com/" target="_blank">
-                    <img class="image-border" src="/static/images/4.jpg" width="100%">
+                <a href="http://www.biofuels-asia.com/" target="_blank">
+                    <img class="image-border" src="/static/images/banner-4.jpg" width="100%">
                 </a>
             </div>
         </div>
@@ -85,10 +86,10 @@
                 </div>
             </div>
             <div class="col-md-4 image">
-                <a href="/wpc"><img class="image-border" src="/static/images/5.jpg" width="100%"></a>
+                <a href="/wpc"><img class="image-border" src="/static/images/banner-5.jpg" width="100%"></a>
             </div>
             <div class="col-md-4 image">
-                <a href="#"><img class="image-border" src="/static/images/6.jpg" width="100%"></a>
+                <a href="#"><img class="image-border" src="/static/images/banner-6.jpg" width="100%"></a>
             </div>
         </div>
     </div>
