--- a/wizweb/wiz/templates/index.html
+++ b/wizweb/wiz/templates/index.html
@@ -68,13 +68,13 @@
             </ol>
             <div class="carousel-inner" style="height:242px;" role="listbox">
                 <div class="item active">
-                    <img class="first-slide" src="/static/images/wiz.jpg" alt="wiz">
+                    <img class="first-slide" src="/static/images/slide-1.jpg" alt="wiz">
                 </div>
                 <div class="item">
-                    <img class="second-slide" src="/static/images/ethonal.jpg" alt="ethonal wiz">
+                    <img class="second-slide" src="/static/images/slide-2.jpg" alt="po wiz">
                 </div>
                 <div class="item">
-                    <img class="second-slide" src="/static/images/soya.jpg" alt="soya wiz">
+                    <img class="second-slide" src="/static/images/slide-3.jpg" alt="soya wiz">
                 </div>
             </div>
 
