--- a/wizweb/wiz/templates/home.html
+++ b/wizweb/wiz/templates/home.html
@@ -39,12 +39,12 @@
                 </div>
             </div>
             <div class="col-md-4 image">
-                <a href="http://www.wizpolyolefin.com">
+                <a href="http://www.wizethanol.com" target="_blank">
                     <img class="image-border" src="/static/images/banner-1.jpg" width="100%">
                 </a>
             </div>
             <div class="col-md-4 image">
-                <a href="http://www.plasticizersummit.com" target="_blank">
+                <a href="http://www.wizethanol.com" target="_blank">
                     <img class="image-border" src="/static/images/banner-2.jpg" width="100%"></a>
             </div>
         </div>
@@ -73,7 +73,7 @@
                 <a href="#"><img class="image-border" src="/static/images/banner-3.jpg" width="100%"></a>
             </div>
             <div class="col-md-4 image">
-                <a href="http://www.biofuels-asia.com/" target="_blank">
+                <a href="http://www.wizpolyolefin.com/" target="_blank">
                     <img class="image-border" src="/static/images/banner-4.jpg" width="100%">
                 </a>
             </div>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="col-md-4 image">
-                <a href="/wpc"><img class="image-border" src="/static/images/banner-5.jpg" width="100%"></a>
+                <a href="#"><img class="image-border" src="/static/images/banner-5.jpg" width="100%"></a>
             </div>
             <div class="col-md-4 image">
                 <a href="#"><img class="image-border" src="/static/images/banner-6.jpg" width="100%"></a>
