--- a/wizweb/wiz/templates/index.html
+++ b/wizweb/wiz/templates/index.html
@@ -65,6 +65,7 @@
                 <li data-target="#myCarousel" data-slide-to="0" style="margin-top:250px;" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1" style="margin-top:250px;"></li>
                 <li data-target="#myCarousel" data-slide-to="2" style="margin-top:250px;"></li>
+                <li data-target="#myCarousel" data-slide-to="3" style="margin-top:250px;"></li>
             </ol>
             <div class="carousel-inner" style="height:242px;" role="listbox">
                 <div class="item active">
@@ -75,6 +76,9 @@
                 </div>
                 <div class="item">
                     <img class="second-slide" src="/static/images/slide-3.jpg" alt="soya wiz">
+                </div>
+                <div class="item">
+                    <img class="second-slide" src="/static/images/slide-4.jpg" alt="soya wiz">
                 </div>
             </div>
 
